--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -6,16 +6,20 @@ WORKDIR /app
 COPY package*.json ./
 
 # Install dependencies
-RUN npm ci
+RUN npm install
 
-# Copy TypeScript configuration and source code
-COPY tsconfig.json .
-COPY src/ src/
+# Copy prisma schema
+COPY prisma ./prisma/
+
+# Generate Prisma client
+RUN npx prisma generate
+
+# Copy the rest of the application code
+COPY . .
 
 # Build TypeScript code
 RUN npm run build
 
 EXPOSE 3000
 
-# Start the server
 CMD ["npm", "start"]
