--- a/.github/deploy-frontend.yml
+++ b/.github/deploy-frontend.yml
@@ -14,7 +14,7 @@ jobs:
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
@@ -22,7 +22,7 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v4
         with:
-          context: backend
-          file: ./backend/Dockerfile
+          context: frontend
+          file: ./frontend/Dockerfile
           push: true
           tags: sarthaksbiswas29/coursefrontend:${{ github.sha }}
