--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -1,7 +1,7 @@
 name: Continuous Deployment
 on:
   push:
-    branches: [ main ]
+    branches: [ deploy ]
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -26,3 +26,16 @@ jobs:
           file: ./frontend/Dockerfile
           push: true
           tags: sarthaksbiswas29/coursefrontend:${{ github.sha }}
+ 
+      - name: Executing Remote SSH Commands
+        uses: appleboy/ssh-action@master
+        with:
+            host: ${{ secrets.SERVER_IP }}
+            username: ${{ secrets.SERVER_USER }}
+            key: ${{ secrets.SERVER_SSH_KEY }}
+            port: 22
+            script: |
+              docker pull sarthaksbiswas29/coursefrontend:${{ github.sha }}
+              docker stop coursefrontend
+              docker rm coursefrontend
+              docker run -p 5173:4173 --name coursefrontend --env-file=~/.secrets/frontend.env -d sarthaksbiswas29/coursefrontend:${{ github.sha }}
