--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -1,4 +1,4 @@
-name: Continuous Deployment
+name: Continuous Deployment for Backend
 on:
   push:
     branches: [ deploy ]
@@ -38,4 +38,4 @@ jobs:
               docker pull sarthaksbiswas29/coursebackend:${{ github.sha }}
               docker stop coursebackend
               docker rm coursebackend
-              docker run -p 3000:3000 --name coursebackend --env-file=~/.secrets/backend.env -d sarthaksbiswas29/coursebackend:${{ github.sha }}
+              docker run -p 3000:3000 --name coursebackend --env-file=.secrets/backend.env -d sarthaksbiswas29/coursebackend:${{ github.sha }}
